fix cut off filter bug

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,13 +1,20 @@
-.search-container {
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  .search-container {
     padding: 20px;
   }
   
-  .search-form {
+  .filter-form {
     margin-bottom: 20px;
+    margin-top: 4000px;
   }
   
   .dog-cards-container {
     margin-top: 20px;
+    min-height: 800px; /* Increased height to the grid */
   }
   
   .dog-card {
@@ -15,6 +22,11 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+  }
+  
+  .dog-image {
+    width: 100%;
+    height: auto;
   }
   
   .pagination-container {
